--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>John's personal site</title>
-</head>
+  </head>
 
 <body>
   <table cellspacing="20" >
@@ -13,6 +13,7 @@
       <td>  <h1>John Hollænder</h1> <p><em>En hjemmeside med <strong>foto</strong> og andre <strong>hobby elementer</strong></em></p></td>
     </tr>
   </table>
+  <h1>Et testsite for development</h1>
   <a href="hobby.html">Mine hobbies</a>
   <hr size 3 noshade>
   <h2>uddannelse</h2>
