--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>John's personal site</title>
   </head>
 
-<body>
+  <body style="background-color: #dfddc7;">
   <table cellspacing="20" >
     <tr>
       <td><img src="billeder/john.jpg" alt="Johns profil billede"></td>
