--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>John's personal site</title>
-  </head>
+  <link rel="stylesheet" href="css/styles.css">
+</head>
 
-  <body style="background-color: #dfddc7;">
+  <body >
   <table cellspacing="20" >
     <tr>
       <td><img src="billeder/john.jpg" alt="Johns profil billede"></td>
@@ -15,8 +16,8 @@
   </table>
   <h1>Et testsite for development</h1>
   <a href="hobby.html">Mine hobbies</a>
-  <hr size 3 noshade>
-  <h2>uddannelse</h2>
+  <hr>
+  <h3>Uddannelse</h3>
   <ul>
     <li>Bankuddannelse</li>
     <li>merconom</li>
@@ -41,14 +42,14 @@
 
     </tr>
   </table>
-  <hr size="3" noshade>
-  <h2>Bøger jeg har læst, som stærkt har påvirket mig</h2>
+  <hr>
+  <h3>Bøger jeg har læst, som stærkt har påvirket mig</h3>
   <ol>
     <li>Bibelen</li>
-    <li>Stømme af nåde</li>
+    <li>Strømme af nåde</li>
   </ol>
-  <hr size="3" noshade>
-  <h2>Skills</h2>
+  <hr>
+  <h3>Skills</h3>
   <table cellspacing="10" >
     <tr>
       <td>
@@ -87,7 +88,7 @@
   </table>
 
 
-  <hr size 3 noshade>
+  <hr>
   <a href="contact.html">Kontakt oplysninger</a>
 </body>
 
